--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -36,6 +36,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
       - name: Start the application
+        working-directory: ./caikit-huggingface-demo
         run: |
           python app.py &
           sleep 60 &&
